# Aude

./: .gitignore  README.md  pyproject.toml
src/aude/: cli.py  cmd_registry.py  config.py  run_cmd.py  version.py
