[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aude-si"
version = "2.0.0"
description = "Custom command setup CLI"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GNU General Public License v3" }

authors = [
{ name = "Samail Islam" }
]

[project.scripts]
aude = "aude.cli:main"